--- a/Sorting/.vscode/settings.json
+++ b/Sorting/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "array": "cpp",
     "string_view": "cpp",
-    "initializer_list": "cpp"
+    "initializer_list": "cpp",
+    "iostream": "cpp"
   }
 }
